Added running of application on docker

--- a/BackedAkamainCDN/pom.xml
+++ b/BackedAkamainCDN/pom.xml
@@ -79,6 +79,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>akamai</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
