Change Tcping program for Hping3 so it can run on Alpine image on Docker

--- a/BackedAkamainCDN/Dockerfile
+++ b/BackedAkamainCDN/Dockerfile
@@ -1,7 +1,10 @@
 FROM openjdk:15-alpine
 
 COPY target/akamai.jar /usr/src/akamai.jar
+
 RUN apk --no-cache add tcpdump \
  && apk --no-cache add sudo \
- && apk --no-cache add pv
+ && apk --no-cache add pv \
+ && apk add hping3 --update-cache --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing
+
 CMD java -agentlib:jdwp=transport=dt_socket,address=*:8000,server=y,suspend=n -jar usr/src/akamai.jar agh.cs.BackendAkamaiCdnApplication
