--- a/BackedAkamainCDN/docker-compose.yml
+++ b/BackedAkamainCDN/docker-compose.yml
@@ -2,16 +2,13 @@ version: '3.5'
 
 services:
   akamai_cdn:
-    #network_mode: host
+    network_mode: host
     container_name: akamai_cdn
     build:
       context: .
     # uncomment 2 lines below on linux, requires 20.04< version od docker engine
 #    extra_hosts:
 #      - "host.docker.internal:host-gateway"
-    ports:
-      - 8090:8090
-      - 8091:8000
     environment:
       - TZ=Europe/Warsaw
       - spring.profiles.active=development
