--- a/BackedAkamainCDN/docker-compose.yml
+++ b/BackedAkamainCDN/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     build:
       context: .
     # uncomment 2 lines below on linux, requires 20.04< version od docker engine
-#    extra_hosts:
-#      - "host.docker.internal:host-gateway"
+    #    extra_hosts:
+    #      - "host.docker.internal:host-gateway"
     environment:
       - TZ=Europe/Warsaw
       - spring.profiles.active=development
       - spring.liquibase.contexts=development
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://172.18.0.1:2173/postgres
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:2173/postgres
