Execute ping on 4 different CDN with endpoint /ping/save

--- a/BackedAkamainCDN/src/main/resources/application.yml
+++ b/BackedAkamainCDN/src/main/resources/application.yml
@@ -15,3 +15,10 @@ throughput:
     - akamai.com
     - netflix.com
     - facebook.com
+
+ping:
+  sites:
+    - youtube.com
+    - akamai.com
+    - netflix.com
+    - facebook.com
