--- a/BackedAkamainCDN/src/main/resources/application.yml
+++ b/BackedAkamainCDN/src/main/resources/application.yml
@@ -9,14 +9,7 @@ spring:
     properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate.ddl-auto: update
 
-throughput:
-  sites:
-    - youtube.com
-    - akamai.com
-    - netflix.com
-    - facebook.com
-
-ping:
+CDN:
   sites:
     - youtube.com
     - akamai.com
