--- a/BackedAkamainCDN/src/main/resources/application.yml
+++ b/BackedAkamainCDN/src/main/resources/application.yml
@@ -9,9 +9,38 @@ spring:
     properties.hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
     hibernate.ddl-auto: update
 
-CDN:
+cdn:
   sites:
-    - youtube.com
-    - akamai.com
-    - netflix.com
-    - facebook.com
+    - generalHost: youtube.com
+      hosts:
+        - r6---sn-f5f7lnee.googlevideo.com
+        - r6.sn-f5f7lnee.googlevideo.com
+        - r3---sn-f5f7kn7z.googlevideo.com
+        - r3.sn-f5f7kn7z.googlevideo.com
+        - r1---sn-f5f7lnel.googlevideo.com
+        - r1.sn-f5f7lnel.googlevideo.com
+        - youtube.com
+        - youtube-ui.l.google.com
+    - generalHost: akamai.com
+      hosts:
+        - e4518.dscapi7.akamaiedge.net
+        - e5763.g.akamaiedge.net
+        - e4518.dscx.akamaiedge.net
+        - e8736.e7.akamaiedge.net
+    - generalHost: netflix.com
+      hosts:
+        - www.netflix.com
+        - codex.nflxext.com
+        - assets.nflxext.com
+        - www.dradis.netflix.com
+        - www.eu-west-1.internal.dradis.netflix.com
+    - generalHost: facebook.com
+      hosts:
+        - star.c10r.facebook.com
+        - star-mini.c10r.facebook.com
+        - static.xx.fbcdn.net
+        - facebook.com
+        - fbcdn.net
+        - scontent.xx.fbcdn.net
+        - scontent-waw1-1.xx.fbcdn.net
+        - video-waw1-1.xx.fbcdn.net
