--- a/BackedAkamainCDN/src/main/resources/application.yml
+++ b/BackedAkamainCDN/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server.port: 8090
 
 spring:
   datasource:
-    url: jdbc:postgresql://172.18.0.1:2173/postgres
+    url: jdbc:postgresql://host.docker.internal:2173/postgres
     username: postgres
     password: postgres
   jpa:
