--- a/BackedAkamainCDN/docker-compose.yml
+++ b/BackedAkamainCDN/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     build:
       context: .
     # uncomment 2 lines below on linux, requires 20.04< version od docker engine
-    #    extra_hosts:
-    #      - "host.docker.internal:host-gateway"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     ports:
       - 8090:8090
       - 8091:8091
