--- a/FrontendAkamaiCdn/package.json
+++ b/FrontendAkamaiCdn/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.1",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "react-vis": "^1.11.7",
