--- a/BackedAkamainCDN/pom.xml
+++ b/BackedAkamainCDN/pom.xml
@@ -32,6 +32,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.5.7</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok-maven</artifactId>
 			<version>1.18.12.0</version>
