juz działaja wszystkie poggers, front tez jest ok chyba

--- a/BackedAkamainCDN/src/main/resources/application.yml
+++ b/BackedAkamainCDN/src/main/resources/application.yml
@@ -41,3 +41,8 @@ cdn:
         - scontent.xx.fbcdn.net
         - scontent-waw1-1.xx.fbcdn.net
         - video-waw1-1.xx.fbcdn.net
+spring:
+  task:
+    execution:
+      pool:
+        core-size: 50
